updated to Service Pack 2: