@@ -30,9 +30,9 @@ public class EntityBoat extends Entity {
 	}
 
 	protected void entityInit() {
-		this.dataWatcher.addObject(17, new Integer(0));
-		this.dataWatcher.addObject(18, new Integer(1));
-		this.dataWatcher.addObject(19, new Integer(0));
+		this.dataWatcher.addObject(17, Integer.valueOf(0));
+		this.dataWatcher.addObject(18, Integer.valueOf(1));
+		this.dataWatcher.addObject(19, Integer.valueOf(0));
 	}
 
 	/**
