@@ -82,7 +82,7 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Integer(this.getMaxHealth()));
+		this.dataWatcher.addObject(16, Integer.valueOf(this.getMaxHealth()));
 	}
 
 	/**
