@@ -25,9 +25,9 @@ public class EntityEnderman extends EntityMob {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte) 0));
-		this.dataWatcher.addObject(17, new Byte((byte) 0));
-		this.dataWatcher.addObject(18, new Byte((byte) 0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte) 0));
+		this.dataWatcher.addObject(17, Byte.valueOf((byte) 0));
+		this.dataWatcher.addObject(18, Byte.valueOf((byte) 0));
 	}
 
 	/**
