@@ -70,11 +70,11 @@ public abstract class EntityMinecart extends Entity {
 	}
 
 	protected void entityInit() {
-		this.dataWatcher.addObject(17, new Integer(0));
-		this.dataWatcher.addObject(18, new Integer(1));
-		this.dataWatcher.addObject(19, new Integer(0));
-		this.dataWatcher.addObject(20, new Integer(0));
-		this.dataWatcher.addObject(21, new Integer(6));
+		this.dataWatcher.addObject(17, Integer.valueOf(0));
+		this.dataWatcher.addObject(18, Integer.valueOf(1));
+		this.dataWatcher.addObject(19, Integer.valueOf(0));
+		this.dataWatcher.addObject(20, Integer.valueOf(0));
+		this.dataWatcher.addObject(21, Integer.valueOf(6));
 		this.dataWatcher.addObject(22, Byte.valueOf((byte) 0));
 	}
 
@@ -208,7 +208,6 @@ public abstract class EntityMinecart extends Entity {
 		int var2;
 
 		if (!this.worldObj.isRemote && this.worldObj instanceof WorldServer) {
-			this.worldObj.theProfiler.startSection("portal");
 			MinecraftServer var1 = ((WorldServer) this.worldObj).getMinecraftServer();
 			var2 = this.getMaxInPortalTime();
 
@@ -243,8 +242,6 @@ public abstract class EntityMinecart extends Entity {
 			if (this.timeUntilPortal > 0) {
 				--this.timeUntilPortal;
 			}
-
-			this.worldObj.theProfiler.endSection();
 		}
 
 		if (this.worldObj.isRemote) {
